--- a/css/style.css
+++ b/css/style.css
@@ -239,7 +239,8 @@ body {
     border: 1px solid rgba(0, 0, 0, 0.1);
     top: 8px;
     right: 8px;
-    cursor: pointer
+    cursor: pointer;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1)
 }
 
 .modal-vektor {
@@ -247,7 +248,9 @@ body {
     height: 11px;
 }
 
-
+.modalButton:hover {
+    fill: var(--accent-color)
+}
 
 .send h2 {
     margin-top: 40px;
@@ -278,6 +281,7 @@ body {
     height: 40px;
     border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;
+
 }
 
 .form textarea {
@@ -285,6 +289,7 @@ body {
     height: 120px;
     border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;
+
 }
 
 .form textarea::placeholder {
@@ -309,6 +314,7 @@ body {
 .sendName {
     position: relative;
 }
+
 
 .iconperson {
     position: absolute;
@@ -345,8 +351,33 @@ body {
 
 }
 
-.form input:hover {
 
+
+.namelink~svg,
+.tellink~svg,
+.emaillink~svg {
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1)
+}
+
+.namelink,
+.tellink,
+.emaillink,
+.modalText {
+    transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1)
+}
+
+.namelink:focus~svg,
+.tellink:focus~svg,
+.emaillink:focus~svg {
+    fill: var(--accent-color);
+
+}
+
+.namelink:focus,
+.tellink:focus,
+.emaillink:focus,
+.modalText:focus {
+    outline: 0;
     border: 1px solid var(--accent-color);
 }
 
@@ -690,7 +721,7 @@ address p {
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
     border: 1px solid var(--accent-color);
-    transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     cursor: pointer
 }
 
@@ -699,7 +730,7 @@ address p {
     font-size: 16px;
     line-height: 1.9;
     font-weight: 700;
-    letter-spacing: 0.06em;
+    letter-spacing: 0.05em;
     color: var(--first-color);
 }
 
