--- a/css/style.css
+++ b/css/style.css
@@ -230,7 +230,7 @@ body {
         0px 2px 1px rgba(0, 0, 0, 0.2);
 }
 
-.modal button {
+.modalButton {
     position: absolute;
     width: 30px;
     height: 30px;
@@ -276,7 +276,8 @@ body {
     margin-bottom: 10px;
 }
 
-.form input {
+.form .formstrok {
+    padding-left: 42px;
     width: 100%;
     height: 40px;
     border: 1px solid rgba(33, 33, 33, 0.2);
@@ -285,11 +286,14 @@ body {
 }
 
 .form textarea {
+    padding-top: 12px;
+    padding-left: 16px;
     width: 100%;
     height: 120px;
     border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;
-
+    resize: none;
+    margin-bottom: 10px;
 }
 
 .form textarea::placeholder {
@@ -297,8 +301,8 @@ body {
     line-height: 1.16;
     letter-spacing: 0.01em;
     color: rgba(117, 117, 117, 0.5);
-    padding-top: 12px;
-    padding-left: 16px;
+
+
 }
 
 .send-title {
@@ -373,12 +377,99 @@ body {
 
 }
 
+.namelink:hover,
+.tellink:hover,
+.emaillink:hover,
+.modalText:hover,
 .namelink:focus,
 .tellink:focus,
 .emaillink:focus,
 .modalText:focus {
-    outline: 0;
+
+    /*outline: 0; - так и не понял скрывать или нет????*/
     border: 1px solid var(--accent-color);
+}
+
+
+.form .check {
+    margin-bottom: 30px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+
+}
+
+.check input {
+
+
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    clip: rect(0 0 0 0);
+    overflow: hidden;
+}
+
+.iconcheck2 {
+    display: inline-block;
+    border: 2px solid var(--primary-text-color);
+    border-radius: 3px;
+    width: 16px;
+    height: 15px;
+    margin-right: 7px;
+
+}
+
+.checkbox:checked~.iconcheck2 {
+    background-color: var(--accent-color);
+    background-image: url(../image/iconcheck.svg);
+    background-size: contain;
+    background-origin: border-box;
+    border: var(--accent-color);
+
+}
+
+.check .send-check {
+    display: inline-block;
+    font-size: 14px;
+    line-height: 1.7;
+    letter-spacing: 0.03em;
+    color: var(--primary-text-color);
+
+}
+
+.check span a {
+    color: var(--accent-color);
+    text-decoration: underline;
+}
+
+.buttonSend {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 200px;
+    padding: 10px 55px 10px 54px;
+    background: var(--accent-color);
+    font-size: 16px;
+    line-height: 1.9;
+    font-weight: 700;
+    letter-spacing: 0.06em;
+    color: var(--first-color);
+    text-align: center;
+    border-radius: 4px;
+    border: none;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    cursor: pointer;
+}
+
+.buttonSend:hover,
+.buttonSend:focus {
+    background: #188CE8;
 }
 
 /*
@@ -697,6 +788,9 @@ address p {
 
 
 .subscription input {
+    padding-top: 15px;
+    padding-bottom: 15px;
+    padding-left: 16px;
     width: 358px;
     height: 50px;
     border: 1px solid rgba(255, 255, 255, 0.3);
@@ -704,7 +798,7 @@ address p {
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
     border-radius: 4px;
     background-color: rgba(255, 255, 255, 0);
-    padding: 15px 295px 15px 16px;
+
     transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -751,6 +845,10 @@ address p {
 
 .footerForm button:hover {
     background: #188CE8
+}
+
+.footerForm input {
+    color: var(--first-color)
 }
 
 /*страница portfolio*/
